Issue #8195: Fix a crash in sqlite Connection.create_collation() if the collation name contains a surrogate character.